--- a/SurfingRedone/SurfingRedone.csproj
+++ b/SurfingRedone/SurfingRedone.csproj
@@ -120,7 +120,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="images\SurfBoards\Board1.png" />
+    <Resource Include="images\SurfBoards\board1.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="images\Beaches\ballyliffinBeach.jpg" />
@@ -135,6 +135,10 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="images\Sample_User_Icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\SurfBoards\board2.png" />
+    <Resource Include="images\SurfBoards\board3.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
