--- a/SurfingRedone/SurfingRedone.csproj
+++ b/SurfingRedone/SurfingRedone.csproj
@@ -153,6 +153,10 @@
     <Resource Include="images\SurfBoards\board2.png" />
     <Resource Include="images\SurfBoards\board3.png" />
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="images\Profilepics\latvianMan.jpeg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
