--- a/SurfingRedone/SurfingRedone.csproj
+++ b/SurfingRedone/SurfingRedone.csproj
@@ -80,6 +80,9 @@
     <Compile Include="MainMenuPage.xaml.cs">
       <DependentUpon>MainMenuPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ShopPage.xaml.cs">
+      <DependentUpon>ShopPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SurfPage1.xaml.cs">
       <DependentUpon>SurfPage1.xaml</DependentUpon>
     </Compile>
@@ -100,6 +103,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="ShopPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="SurfPage1.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -153,9 +160,11 @@
     <Resource Include="images\SurfBoards\board2.png" />
     <Resource Include="images\SurfBoards\board3.png" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
+    <Resource Include="images\Profilepics\alex.png" />
     <Resource Include="images\Profilepics\latvianMan.jpeg" />
+    <Resource Include="images\Profilepics\maria.jpg" />
+    <Resource Include="images\Profilepics\paul.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
